fix: Search icon in header visible on wide screen

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -175,7 +175,6 @@ ui5-tabcontainer::part(content) {
     0.75rem center,
     16px
   );
-  height: 2rem;
 
   ui5-icon {
     align-self: center;
